--- a/index.html
+++ b/index.html
@@ -20,75 +20,79 @@
 <body>
     <aside id="popup"><a href="#"><img src="./images/icon/ico_top.png" alt="위로가기"></a></aside>
     <?php include('./header.php') ?>
-    <!-- <header>
-        <div class="left">
-            <h1><a href="./index.html"><img src="./images/logo_w.png" alt="CINESHOP"></a></h1>
-            <nav>
-                <ul>
-                    <li><a href="#">ALL</a>
-                        <ul class="sub">
-                            <li><a href="#">WB</a>
-                                <ul class="sub2">
-                                    <li><a href="#">해리포터</a></li>
-                                    <li><a href="#">프렌즈</a></li>
-                                    <li><a href="#">배트맨</a></li>
-                                    <li><a href="#">톰과제리</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">DISNEY/PIXAR</a>
-                                <ul class="sub2">
-                                    <li><a href="#">업</a></li>
-                                    <li><a href="#">덤보</a></li>
-                                    <li><a href="#">마블</a></li>
-                                    <li><a href="#">심슨</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">UNIVERSAL</a>
-                                <ul class="sub2">
-                                    <li><a href="#">슈퍼마리오</a></li>
-                                    <li><a href="#">핫스터프</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">CINESHOP</a>
-                                <ul class="sub2">
-                                    <li><a href="#">파코니</a></li>
-                                    <li><a href="#">콜렉팅</a></li>
-                                    <li><a href="#">일본 애니메이션</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="#">BEST SELLERS</a></li>
-                    <li><a href="#">NEW ARRIVALS</a></li>
-                    <li><a href="#">LIVE</a></li>
-                    <li><a href="#">EVENT</a>
-                        <ul class="sub">
-                            <li><a href="#">진행 이벤트</a></li>
-                            <li><a href="#">종료 이벤트</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <div class="nav_bg"></div>
-            </nav>
-        </div>
-        <div class="lnb">
-            <div class="search_wrap">
-                <button type="button"><img src="./images/icon/ico_search.png" alt="검색"></button>
-                <div class="open_search">
-                    <button id="search_close" type="button"><img src="./images/icon/ico_close.png" alt="닫기"></button>
-                    <form action="#" method="get">
-                        <fieldset>
-                            <legend class="skip">검색양식</legend>
-                            <input type="text" name="search" id="search">
-                            <button type="submit" id="search_btn"><img src="./images/icon/ico_search.png" alt="검색"></button>
-                        </fieldset>
-                    </form>
-                </div>
+    <header>
+        <div class="container">
+            <div class="left">
+                <h1><a href="./index.html"><img src="./images/logo_w.png" alt="CINESHOP"></a></h1>
+                <nav>
+                    <ul class="gnb">
+                        <li><a href="./product_all.html">ALL</a>
+                            <ul class="sub">
+                                <li><a href="#">WB</a>
+                                    <ul class="sub2">
+                                        <li><a href="#">해리포터</a></li>
+                                        <li><a href="#">프렌즈</a></li>
+                                        <li><a href="#">배트맨</a></li>
+                                        <li><a href="#">톰과제리</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">DISNEY/PIXAR</a>
+                                    <ul class="sub2">
+                                        <li><a href="#">업</a></li>
+                                        <li><a href="#">덤보</a></li>
+                                        <li><a href="#">마블</a></li>
+                                        <li><a href="#">심슨</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">UNIVERSAL</a>
+                                    <ul class="sub2">
+                                        <li><a href="#">슈퍼마리오</a></li>
+                                        <li><a href="#">핫스터프</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">CINESHOP</a>
+                                    <ul class="sub2">
+                                        <li><a href="#">파코니</a></li>
+                                        <li><a href="#">콜렉팅</a></li>
+                                        <li><a href="#">J-MOVIE</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li><a href="#">BEST</a></li>
+                        <li><a href="#">NEW</a></li>
+                        <li><a href="#">LIVE</a></li>
+                        <li><a href="#">EVENT</a>
+                            <ul class="sub">
+                                <li><a href="#">진행 이벤트</a></li>
+                                <li><a href="#">종료 이벤트</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="nav_bg"></div>
+                </nav>
             </div>
-            <a href="./login.html"><img src="./images/icon/ico_user.png" alt="로그인"></a>
-            <a href="#"><img src="./images/icon/ico_cart.png" alt="장바구니"></a>
+            <div class="lnb">
+                <div class="search_wrap">
+                    <button type="button"><img src="./images/icon/ico_search.png" alt="검색"></button>
+                    <div class="open_search">
+                        <div class="container">
+                            <button id="search_close" type="button"><img src="./images/icon/ico_close.png" alt="닫기"></button>
+                            <form action="#" method="get">
+                                <fieldset>
+                                    <legend class="skip">검색양식</legend>
+                                    <input type="text" name="search" id="search" placeholder="검색어를 입력하세요.">
+                                    <button type="submit" id="search_btn"><img src="./images/icon/ico_search.png" alt="검색"></button>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <a href="./login.html"><img src="./images/icon/ico_user.png" alt="로그인"></a>
+                <a href="#"><img src="./images/icon/ico_cart.png" alt="장바구니"></a>
+            </div>
         </div>
-    </header> -->
+    </header>
     <main>
         <!-- 1. main-slide -->
         <div class="swiper" id="main_slide">
