--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/login.css">
 </head>
 <body>
+    <aside id="popup"><a href="#"><img src="./images/icon/ico_top.png" alt="위로가기"></a></aside>
     <?php include('./header.php') ?>
     <main>
         <div class="login">
