--- a/map.html
+++ b/map.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/map.css">
 </head>
 <body>
+    <aside id="popup"><a href="#"><img src="./images/icon/ico_top.png" alt="위로가기"></a></aside>
     <?php include('./header.php') ?>
     <main>
         <h2>오프라인 매장 찾기</h2>
