--- a/product_all.html
+++ b/product_all.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./styles/product.css">
 </head>
 <body>
+    <aside id="popup"><a href="#"><img src="./images/icon/ico_top.png" alt="위로가기"></a></aside>
     <?php include('./header.php') ?>
     <main>
         <section class="all_product">
