--- a/login.html
+++ b/login.html
@@ -38,15 +38,15 @@
                                     <label for="login_fixed"><input type="checkbox" name="login_fixed" id="login_fixed">
                                     <span>로그인 상태 유지</span></label>
                                 </div>
-                                <a href="#"><span>아이디/비밀번호 찾기</span><img src="#" alt=""></a>
+                                <a href="#"><span>아이디/비밀번호 찾기</span><img src="./images/icon/ico_more_g.png" alt=""></a>
                             </div>
                             <p><button type="submit" class="login_btn">로그인</button></p>
                         </fieldset>
                     </form>
                     <div class="other">
-                        <a href="#"><img src="./images/ico_sns_google.png" alt=""><span>네이버 로그인</span></a>
-                        <a href="#"><img src="./images/ico_sns_apple.png" alt=""><span>카카오톡 로그인</span></a>
-                        <a href="#"><img src="./images/ico_sns_kakao.png" alt=""><span>구글 로그인</span></a>
+                        <a href="#"><img src="./images/icon/ico_naver.png" alt=""><span>네이버 로그인</span></a>
+                        <a href="#"><img src="./images/icon/ico_kakao.png" alt=""><span>카카오톡 로그인</span></a>
+                        <a href="#"><img src="./images/icon/ico_google.png" alt=""><span>구글 로그인</span></a>
                     </div>
                 </div>
                 <div class="tab_c2">
@@ -58,12 +58,10 @@
                                 <p><input type="text" name="name" id="name" placeholder="주문자명"></p>
                             </div>
                             <div class="radio"> 
-                                <label for="email_order" class="active">
-                                    <input type="radio" checked name="email_order" value="email" id="email_order">
+                                <label class="active">
                                     <span>이메일</span>
                                 </label>
-                                <label for="phone_order">
-                                    <input type="radio" name="phone_order" value="phone" id="phone_order">
+                                <label>
                                     <span>핸드폰 번호</span>
                                 </label>
                             </div>
