--- a/detail.html
+++ b/detail.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     <main>
+        <aside id="popup"><a href="#"><img src="./images/icon/ico_top.png" alt="위로가기"></a></aside>
+        <?php include('./header.php') ?>
         <section class="product_title">
             <div class="imgCls">
                 <div class="img_contents">
@@ -29,13 +31,13 @@
             </div>
             <div class="contents">
                 <div class="page_location">
-                    <a href="#">HOME</a>
+                    <a href="./index.html">HOME</a>
                     <img src="./images/icon/ico_category.png" alt="">
-                    <a href="#">ALL</a>
+                    <a href="./product_all.html">ALL</a>
                     <img src="./images/icon/ico_category.png" alt="">
-                    <a href="#">WB</a>
+                    <a href="./product_all.html">WB</a>
                     <img src="./images/icon/ico_category.png" alt="">
-                    <a href="#">해리포터</a>
+                    <a href="./product_all.html">해리포터</a>
                 </div>
                 <h2>해리포터 랜덤뱃지2</h2>
                 <div class="price">
@@ -98,33 +100,33 @@
                 <div class="prd_c2">
                     <div class="pay_i">
                         <p class="i_title">상품결제정보</p>
-                        <div class="desc">
-                            <p>고액결제의 경우 안전을 위해 카드사에서 확인전화를 드릴 수도 있습니다. 확인과정에서 도난 카드의 사용이나 타인 명의의 주문등 정상적인 주문이 아니라고 판단될 경우 임의로 주문을 보류 또는 취소할 수 있습니다.</p>
+                        <div class="i_desc">
+                            <p>고액결제의 경우 안전을 위해 카드사에서 확인전화를 드릴 수도 있습니다.</p>
+                            <p>확인과정에서 도난 카드의 사용이나 타인 명의의 주문등 정상적인 주문이 아니라고 판단될 경우 임의로 주문을 보류 또는 취소할 수 있습니다.</p>
                             <p>무통장 입금은 상품 구매 대금은 PC뱅킹, 인터넷뱅킹, 텔레뱅킹 혹은 가까운 은행에서 직접 입금하시면 됩니다.</p>
                             <p>주문시 입력한 입금자명과 실제입금자의 성명이 반드시 일치하여야 하며, 7일 이내로 입금을 하셔야 하며 입금되지 않은 주문은 자동취소 됩니다.</p>
                         </div>
                     </div>
                     <div class="delivery_i">
                         <p class="i_title">배송정보</p>
-                        <div class="desc">
-                            <p>배송 방법 : 택배</p>
-                            <p>배송 지역 : 전국지역</p>
-                            <p>배송 비용 : 3,000</p>
-                            <p>배송 기간 : 3일 ~ 7일</p>
-                            <p>배송 안내 : - 산간벽지나 도서지방은 별도의 추가금액을 지불하셔야 하는 경우가 있습니다.
-                            </p>
+                        <div class="i_desc">
+                            <p><em>배송방법</em><span>택배</span></p>
+                            <p><em>배송지역</em><span>전국지역</span></p>
+                            <p><em>배송비용</em><span>3,000</span></p>
+                            <p><em>배송기간</em><span>3일 ~ 7일</span></p>
+                            <p><em>배송안내</em><span>산간벽지나 도서지방은 별도의 추가금액을 지불하셔야 하는 경우가 있습니다.</span></p>
                             <p>고객님께서 주문하신 상품은 입금 확인후 배송해 드립니다. 다만, 상품종류에 따라서 상품의 배송이 다소 지연될 수 있습니다.</p>
                         </div>
                     </div>
                     <div class="change_i">
                         <p class="i_title">교환 및 반품정보</p>
-                        <div class="desc desc1">
+                        <div class="i_desc desc1">
                             <p class="desc_t">교환 및 반품 주소</p>
                             <div class="desc_c">
                                 <p>[07217] 서울특별시 영등포구 당산로41길 11 (당산동4가) 당산SKV1center 지하 4층 401호 CGV 씨네샵 교환/반품 (항만서비스)</p>
                             </div>
                         </div>
-                        <div class="desc desc2">
+                        <div class="i_desc desc2">
                             <p class="desc_t">교환 및 반품이 가능한 경우</p>
                             <div class="desc_c">
                                 <p>계약내용에 관한 서면을 받은 날부터 7일. 단, 그 서면을 받은 때보다 재화등의 공급이 늦게 이루어진 경우에는 재화등을 공급받거나 재화등의 공급이 시작된 날부터 7일 이내</p>
@@ -133,7 +135,7 @@
                                 <p>초기 배송 시 무료 배송 받으신 후 위와 같은 상황으로 반품 하실 경우 초기 배송비도 고객님께서 부담하셔야 함을 안내드립니다.</p>
                             </div>
                         </div>
-                        <div class="desc desc3">
+                        <div class="i_desc desc3">
                             <p class="desc_t">교환 및 반품이 불가능한 경우</p>
                             <div class="desc_c">
                                 <p>이용자에게 책임 있는 사유로 재화 등이 멸실 또는 훼손된 경우(다만, 재화 등의 내용을 확인하기 위하여 포장 등을 훼손한 경우에는 청약철회를 할 수 있습니다.)</p>
@@ -147,17 +149,22 @@
                     </div>
                 </div>
                 <div class="prd_c3">
-                    <iframe src="http://iso-design.pe.kr/gnuboard5/bbs/board.php?bo_table=gentle_review" frameborder="0" scrolling="no"></iframe>
+                    <span>REVIEW</span>
+                    <iframe src="http://iso-design.pe.kr/gnuboard5/bbs/board.php?bo_table=cineshop_review" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div class="prd_c4">
-                    <iframe src="http://iso-design.pe.kr/gnuboard5/bbs/board.php?bo_table=gentle_review" frameborder="0" scrolling="no"></iframe>
+                    <span>Q&A</span>
+                    <iframe src="http://iso-design.pe.kr/gnuboard5/bbs/board.php?bo_table=cineshop_QandA" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
         </section>
     </main>
+    <script src="./script/common.js"></script>
     <script>
         const img_tab = document.querySelectorAll('.img_tab a')
         const img_contents = document.querySelectorAll('.img_contents > img')
+        const tab_title= document.querySelectorAll('.tab_title a')
+        const tab_contents = document.querySelectorAll('.tab_contents > div')
         for(let i of img_contents){i.style.display = 'none'}
         img_contents[0].style.display = 'block'
         img_tab.forEach(function(t,i){
@@ -167,6 +174,12 @@
                 t.classList.add('active')
                 for(let i of img_contents){i.style.display = 'none'}
                 img_contents[i].style.display = 'block'
+            })
+        })
+        tab_title.forEach(function(t,i){
+            t.addEventListener('click', function(e){
+                e.preventDefault()
+                window.scrollTo(0,tab_contents[i].offsetTop-70)
             })
         })
     </script>
