--- a/index.html
+++ b/index.html
@@ -63,13 +63,20 @@
             </div>
             <div class="swiper" id="category_slide">
                 <div class="swiper-wrapper">
-                    <a href="./product_all.html" class="swiper-slide slide1"><span>포켓몬스터</span><img src="./images/category1.png" alt=""></a>
-                    <a href="./product_all.html" class="swiper-slide slide2"><span>톰과 제리</span><img src="./images/category2.png" alt=""></a>
-                    <a href="./product_all.html" class="swiper-slide slide3"><span>슈퍼마리오</span><img src="./images/category3.png" alt=""></a>
-                    <a href="./product_all.html" class="swiper-slide slide4"><span>디즈니</span><img src="./images/category4.png" alt=""></a>
-                    <a href="./product_all.html" class="swiper-slide slide5"><span>파코니</span><img src="./images/category5.png" alt=""></a>
-                    <a href="./product_all.html" class="swiper-slide slide6"><span>해리포터</span><img src="./images/category6.png" alt=""></a>
-                    <a href="./product_all.html" class="swiper-slide slide7"><span>지브리</span><img src="./images/category7.png" alt=""></a>
+                    <a href="./product_all.html" class="swiper-slide slide1"><span>포켓몬스터</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide2"><span>톰과 제리</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide3"><span>슈퍼마리오</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide4"><span>디즈니</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide5"><span>파코니</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide6"><span>해리포터</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide7"><span>지브리</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide1"><span>포켓몬스터</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide2"><span>톰과 제리</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide3"><span>슈퍼마리오</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide4"><span>디즈니</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide5"><span>파코니</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide6"><span>해리포터</span></a>
+                    <a href="./product_all.html" class="swiper-slide slide7"><span>지브리</span></a>
                 </div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
@@ -86,6 +93,76 @@
             </div>
             <div class="swiper" id="best_slide">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide slide1">
+                        <div class="box">
+                            <a href="./detail.html" class="item_img"><img src="./images/best1.jpg" alt=""></a>
+                            <a href="#" class="like_img">관심상품등록</a>
+                        </div>
+                        <a href="./detail.html" class="txt">
+                            <h2 class="name">해리포터 랜덤카드</h2>
+                            <p class="price">5,000원</p>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide2">
+                        <div class="box">
+                            <a href="./detail.html" class="item_img"><img src="./images/best2.jpg" alt=""></a>
+                            <a href="#" class="like_img">관심상품등록</a>
+                        </div>
+                        <a href="./detail.html" class="txt">
+                            <h2 class="name">CGV 필름마크북 ver.4</h2>
+                            <p class="price">18,000원</p>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide3">
+                        <div class="box">
+                            <a href="./detail.html" class="item_img"><img src="./images/best3.jpg" alt=""></a>
+                            <a href="#" class="like_img">관심상품등록</a>
+                        </div>
+                        <a href="./detail.html" class="txt">
+                            <h2 class="name">스즈메의 문단속 다이진 마그넷 세트</h2>
+                            <p class="price">27,000원</p>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide4">
+                        <div class="box">
+                            <a href="./detail.html" class="item_img"><img src="./images/best4.jpg" alt=""></a>
+                            <a href="#" class="like_img">관심상품등록</a>
+                        </div>
+                        <a href="./detail.html" class="txt">
+                            <h2 class="name">스즈메의 문단속 입체 마그넷</h2>
+                            <p class="price">18,000원</p>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide5">
+                        <div class="box">
+                            <a href="./detail.html" class="item_img"><img src="./images/best5.jpg" alt=""></a>
+                            <a href="#" class="like_img">관심상품등록</a>
+                        </div>
+                        <a href="./detail.html" class="txt">
+                            <h2 class="name">스즈메의 문단속 뱃지</h2>
+                            <p class="price">7,000원</p>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide6">
+                        <div class="box">
+                            <a href="./detail.html" class="item_img"><img src="./images/best6.jpg" alt=""></a>
+                            <a href="#" class="like_img">관심상품등록</a>
+                        </div>
+                        <a href="./detail.html" class="txt">
+                            <h2 class="name">프렌즈 빈티지 노트</h2>
+                            <p class="price">5,000원</p>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide7">
+                        <div class="box">
+                            <a href="./detail.html" class="item_img"><img src="./images/best7.jpg" alt=""></a>
+                            <a href="#" class="like_img">관심상품등록</a>
+                        </div>
+                        <a href="./detail.html" class="txt">
+                            <h2 class="name">포켓몬스터 랜덤뱃지</h2>
+                            <p class="price">10,000원</p>
+                        </a>
+                    </div>
                     <div class="swiper-slide slide1">
                         <div class="box">
                             <a href="./detail.html" class="item_img"><img src="./images/best1.jpg" alt=""></a>
@@ -286,6 +363,54 @@
             </div>
             <div class="swiper" id="shop_slide">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide slide1">
+                        <a href="./map.html" class="slide_txt">
+                            <em>용산 아이파크몰점</em>
+                            <span>영화 속 캐릭터를 보다<br>
+                                가까이서 만나고 싶다면<br>
+                                오프라인 매장으로 오세요!</span>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide2">
+                        <a href="./map.html" class="slide_txt">
+                            <em>여의도점</em>
+                            <span>영화 속 캐릭터를 보다<br>
+                                가까이서 만나고 싶다면<br>
+                                오프라인 매장으로 오세요!</span>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide3">
+                        <a href="./map.html" class="slide_txt">
+                            <em>영등포점</em>
+                            <span>영화 속 캐릭터를 보다<br>
+                                가까이서 만나고 싶다면<br>
+                                오프라인 매장으로 오세요!</span>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide4">
+                        <a href="./map.html" class="slide_txt">
+                            <em>왕십리점</em>
+                            <span>영화 속 캐릭터를 보다<br>
+                                가까이서 만나고 싶다면<br>
+                                오프라인 매장으로 오세요!</span>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide5">
+                        <a href="./map.html" class="slide_txt">
+                            <em>인천점</em>
+                            <span>영화 속 캐릭터를 보다<br>
+                                가까이서 만나고 싶다면<br>
+                                오프라인 매장으로 오세요!</span>
+                        </a>
+                    </div>
+                    <div class="swiper-slide slide6">
+                        <a href="./map.html" class="slide_txt">
+                            <em>광교점</em>
+                            <span>영화 속 캐릭터를 보다<br>
+                                가까이서 만나고 싶다면<br>
+                                오프라인 매장으로 오세요!</span>
+                        </a>
+                    </div>
                     <div class="swiper-slide slide1">
                         <a href="./map.html" class="slide_txt">
                             <em>용산 아이파크몰점</em>
